Fix wrapping when there are more words

--- a/apps/web/assets/stylesheets/application.css.scss
+++ b/apps/web/assets/stylesheets/application.css.scss
@@ -68,9 +68,11 @@ body {
   padding: 15px;
   display: flex;
   flex-direction: row;
-  flex-wrap: nowrap;
+  flex-wrap: wrap;
   justify-content: center;
   align-items: center;
+  width: 90%;
+  margin: auto;
 
   .link {
     margin: 20px;
